--- a/src/sources.bib
+++ b/src/sources.bib
@@ -1,10 +1,10 @@
 @book{databases,
-author = {Domdouzis, Konstantinos and Lake, Peter and Crowther, Paul},
-year = {2021},
-month = {01},
-pages = {},
-title = {Concise Guide To Databases A Practical Introduction by Konstantinos Domdouzis, Peter Lake, Paul Crowther (2nd Edition)},
-isbn = {978-3-030-42223-3}
+  author = {Domdouzis, Konstantinos and Lake, Peter and Crowther, Paul},
+  year = {2021},
+  month = {01},
+  pages = {},
+  title = {Concise Guide To Databases A Practical Introduction by Konstantinos Domdouzis, Peter Lake, Paul Crowther (2nd Edition)},
+  isbn = {978-3-030-42223-3}
 }
 
 @book{onlineSecurity,
@@ -45,4 +45,12 @@ isbn = {978-3-030-42223-3}
   address   = {Birmingham},
   year      = {2017},
   isbn      = {978-1-78646-378-4}
+}
+
+@misc{dpmpRadiovaSit,
+	author = {},
+	title = {{T}{E}{N}{D}{E}{R} {A}{R}{E}{N}{A} --- tenderarena.cz},
+	howpublished = {\url{https://tenderarena.cz/dodavatel/seznam-profilu-zadavatelu/detail/Z0000740/zakazka/254507}},
+	year = {2019},
+	note = {[Accessed 31-10-2025]},
 }
