--- a/src/sources.bib
+++ b/src/sources.bib
@@ -48,9 +48,30 @@
 }
 
 @misc{dpmpRadiovaSit,
-	author = {},
-	title = {{T}{E}{N}{D}{E}{R} {A}{R}{E}{N}{A} --- tenderarena.cz},
-	howpublished = {\url{https://tenderarena.cz/dodavatel/seznam-profilu-zadavatelu/detail/Z0000740/zakazka/254507}},
-	year = {2019},
-	note = {[Accessed 31-10-2025]},
+	author       = {TENDER ARENA},
+	title        = {Digitální radiová síť Dopravního podniku města Pardubic},
+	url          = {https://tenderarena.cz/dodavatel/seznam-profilu-zadavatelu/detail/Z0000740/zakazka/254507},
+  urldate      = {2025-11-01},
+	year         = {2019},
+	note         = {[Accessed 31-10-2025]},
+}
+
+@misc{vyhlaskaCISJR,
+  author       = {{ČESKÁ REPUBLIKA}},
+  title        = {Vyhláška ze dne 23. června 2014 o jízdních řádech veřejné linkové dopravy},
+  howpublished = {In: Sbírka zákonů. 2014, částka 52, číslo 122},
+  year         = {2014},
+  url          = {http://aplikace.mvcr.cz/sbirka-zakonu/ViewFile.aspx?type=z&id=27158},
+  urldate      = {2025-11-08},
+  language     = {czech}
+}
+
+@misc{jdfSpec,
+  author       = {{Ministerstvo dopravy České republiky}},
+  title        = {Metodický pokyn č. 5 k jízdním řádům veřejné linkové dopravy},
+  year         = {2023},
+  institution  = {Ministerstvo dopravy ČR},
+  url          = {https://md.gov.cz/getattachment/Dokumenty/Verejna-doprava/Jizdni-rady,-kalendare-pro-jizdni-rady,-metodi-(1)/Jizdni-rady-verejne-dopravy/metodicky-pokyn-cis-5.pdf.aspx},
+  urldate      = {2025-11-08},
+  language     = {czech}
 }
