--- a/src/sources.bib
+++ b/src/sources.bib
@@ -49,7 +49,7 @@
 
 @misc{dpmpRadiovaSit,
 	author       = {TENDER ARENA},
-	title        = {Digitální radiová síť Dopravního podniku města Pardubic},
+	title        = {Digitální radiová síť Dopravního podniku města Pardubic, a.s. a Městské policie Pardubice},
 	url          = {https://tenderarena.cz/dodavatel/seznam-profilu-zadavatelu/detail/Z0000740/zakazka/254507},
   urldate      = {2025-11-01},
 	year         = {2019},
