--- a/src/sources.bib
+++ b/src/sources.bib
@@ -75,3 +75,12 @@
   urldate      = {2025-11-08},
   language     = {czech}
 }
+
+@misc{onlineDpmp,
+  title        = {Online poloha vozů MHD},
+  year         = {2025},
+  institution  = {Dopravní podnik města Pardubic, a.s.},
+  url          = {https://online.dpmp.cz},
+  urldate      = {2025-11-10},
+  language     = {czech}
+}
