--- a/src/sources.bib
+++ b/src/sources.bib
@@ -1,10 +1,10 @@
 @book{databases,
   author = {Domdouzis, Konstantinos and Lake, Peter and Crowther, Paul},
-  year = {2021},
-  month = {01},
-  pages = {},
-  title = {Concise Guide To Databases A Practical Introduction by Konstantinos Domdouzis, Peter Lake, Paul Crowther (2nd Edition)},
-  isbn = {978-3-030-42223-3}
+  year   = {2021},
+  month  = {01},
+  pages  = {},
+  title  = {Concise Guide To Databases A Practical Introduction by Konstantinos Domdouzis, Peter Lake, Paul Crowther (2nd Edition)},
+  isbn   = {978-3-030-42223-3}
 }
 
 @book{onlineSecurity,
@@ -48,12 +48,12 @@
 }
 
 @misc{dpmpRadiovaSit,
-	author       = {TENDER ARENA},
-	title        = {Digitální radiová síť Dopravního podniku města Pardubic, a.s. a Městské policie Pardubice},
-	url          = {https://tenderarena.cz/dodavatel/seznam-profilu-zadavatelu/detail/Z0000740/zakazka/254507},
-  urldate      = {2025-11-01},
-	year         = {2019},
-	note         = {[Accessed 31-10-2025]},
+  author  = {TENDER ARENA},
+  title   = {Digitální radiová síť Dopravního podniku města Pardubic, a.s. a Městské policie Pardubice},
+  url     = {https://tenderarena.cz/dodavatel/seznam-profilu-zadavatelu/detail/Z0000740/zakazka/254507},
+  urldate = {2025-11-01},
+  year    = {2019},
+  note    = {[Accessed 31-10-2025]}
 }
 
 @misc{vyhlaskaCISJR,
@@ -67,20 +67,68 @@
 }
 
 @misc{jdfSpec,
-  author       = {{Ministerstvo dopravy České republiky}},
-  title        = {Metodický pokyn č. 5 k jízdním řádům veřejné linkové dopravy},
-  year         = {2023},
-  institution  = {Ministerstvo dopravy ČR},
-  url          = {https://md.gov.cz/getattachment/Dokumenty/Verejna-doprava/Jizdni-rady,-kalendare-pro-jizdni-rady,-metodi-(1)/Jizdni-rady-verejne-dopravy/metodicky-pokyn-cis-5.pdf.aspx},
-  urldate      = {2025-11-08},
-  language     = {czech}
+  author      = {{Ministerstvo dopravy České republiky}},
+  title       = {Metodický pokyn č. 5 k jízdním řádům veřejné linkové dopravy},
+  year        = {2023},
+  institution = {Ministerstvo dopravy ČR},
+  url         = {https://md.gov.cz/getattachment/Dokumenty/Verejna-doprava/Jizdni-rady,-kalendare-pro-jizdni-rady,-metodi-(1)/Jizdni-rady-verejne-dopravy/metodicky-pokyn-cis-5.pdf.aspx},
+  urldate     = {2025-11-08},
+  language    = {czech}
 }
 
 @misc{onlineDpmp,
-  title        = {Online poloha vozů MHD},
-  year         = {2025},
-  institution  = {Dopravní podnik města Pardubic, a.s.},
-  url          = {https://online.dpmp.cz},
-  urldate      = {2025-11-10},
-  language     = {czech}
+  title       = {Online poloha vozů MHD},
+  year        = {2025},
+  institution = {Dopravní podnik města Pardubic, a.s.},
+  url         = {https://online.dpmp.cz},
+  urldate     = {2025-11-10},
+  language    = {czech}
+}
+
+@book{Bruckner_2012,
+  place     = {Praha},
+  title     = {Tvorba informačních systémů: Principy, metodiky, Architektury},
+  publisher = {Grada},
+  author    = {Bruckner, Tomáš},
+  year      = {2012}
+} 
+
+@book{Danel2013,
+  author    = {Danel, Roman},
+  title     = {Informační systémy},
+  year      = {2013},
+  publisher = {Vysoká škola báňská – Technická univerzita Ostrava},
+  address   = {Ostrava},
+  isbn      = {978-80-248-3051-3}
+}
+
+@book{Pressman2014,
+  author    = {Pressman, Roger S. and Maxim, Bruce R.},
+  title     = {Software Engineering: A Practitioner’s Approach},
+  edition   = {8th},
+  year      = {2014},
+  publisher = {McGraw-Hill Education},
+  address   = {New York},
+  isbn      = {978-0078022128}
+}
+
+@book{Dumas2018,
+  author    = {Dumas, Marlon and La Rosa, Marcello and Mendling, Jan and Reijers, Hajo A.},
+  title     = {Fundamentals of Business Process Management},
+  edition   = {2nd},
+  year      = {2018},
+  publisher = {Springer},
+  address   = {Cham / Berlin Heidelberg},
+  isbn      = {978-3-662-56508-7},
+  doi       = {10.1007/978-3-662-56509-4}
+}
+
+@book{Blanchard2010,
+  author    = {Blanchard, Benjamin S. and Fabrycky, Wolter J.},
+  title     = {Systems Engineering and Analysis},
+  edition   = {5th},
+  year      = {2010},
+  publisher = {Pearson / Prentice Hall},
+  address   = {Upper Saddle River, NJ},
+  isbn      = {978-0132217354}
 }
