--- a/src/sources.bib
+++ b/src/sources.bib
@@ -132,3 +132,34 @@
   address   = {Upper Saddle River, NJ},
   isbn      = {978-0132217354}
 }
+
+@book{Sommerville2015,
+  author    = {Sommerville, Ian},
+  title     = {Software Engineering},
+  edition   = {10th},
+  year      = {2015},
+  publisher = {Pearson},
+  address   = {Harlow, England},
+  isbn      = {978-0133943030}
+}
+
+
+@book{SommervilleSawyer1997,
+  author    = {Sommerville, Ian and Sawyer, Pete},
+  title     = {Requirements Engineering: A Good Practice Guide},
+  edition   = {1st},
+  year      = {1997},
+  publisher = {John Wiley \& Sons},
+  address   = {Hoboken, NJ},
+  isbn      = {978-0471974444}
+}
+
+@book{WardPeppard2002,
+  author    = {Ward, John L. and Peppard, Joe},
+  title     = {Strategic Planning for Information Systems},
+  edition   = {3rd},
+  year      = {2002},
+  publisher = {John Wiley \& Sons},
+  address   = {Chichester, England},
+  isbn      = {978-0470841471}
+}
