--- a/src/sources.bib
+++ b/src/sources.bib
@@ -90,7 +90,8 @@
   title     = {Tvorba informačních systémů: Principy, metodiky, Architektury},
   publisher = {Grada},
   author    = {Bruckner, Tomáš},
-  year      = {2012}
+  year      = {2012},
+  isbn      = {978-80-247-4153-6}
 } 
 
 @book{Danel2013,
