--- a/src/sources.bib
+++ b/src/sources.bib
@@ -85,6 +85,24 @@
   language    = {czech}
 }
 
+@misc{MhdOnlinePardubice,
+  title       = {MHD online Pardubice},
+  year        = {2025},
+  institution = {MHD online.cz},
+  url         = {https://pardubice.mhdonline.cz/},
+  urldate     = {2025-12-15},
+  language    = {czech}
+}
+
+@misc{MhdOnlineAdmin,
+  title       = {MHD online administrace},
+  year        = {2025},
+  institution = {MHD online.cz},
+  url         = {https://administrace.mhdonline.cz/},
+  urldate     = {2025-12-15},
+  language    = {czech}
+}
+
 @book{Bruckner_2012,
   place     = {Praha},
   title     = {Tvorba informačních systémů: Principy, metodiky, Architektury},
@@ -114,15 +132,15 @@
 }
 
 @book{Dumas2018,
-  author    = {Dumas, Marlon and La Rosa, Marcello and Mendling, Jan and Reijers, Hajo A.},
   title     = {Fundamentals of Business Process Management},
-  edition   = {2nd},
+  author    = {Dumas, Marlon and La Rosa, Marcello and Mendling, Jan and Reijers, Hajo A.},
+  edition   = {2},
   year      = {2018},
-  publisher = {Springer},
+  publisher = {Springer Berlin Heidelberg},
   address   = {Cham / Berlin Heidelberg},
-  isbn      = {978-3-662-56508-7},
-  doi       = {10.1007/978-3-662-56509-4}
+  isbn      = {978-3-662-56509-4}
 }
+
 
 @book{Blanchard2010,
   author    = {Blanchard, Benjamin S. and Fabrycky, Wolter J.},
@@ -163,4 +181,34 @@
   publisher = {John Wiley \& Sons},
   address   = {Chichester, England},
   isbn      = {978-0470841471}
+}
+
+@techreport{omg2013bpmn202,
+  title       = {Business Process Model and Notation (BPMN) -- Version 2.0.2},
+  author      = {{Object Management Group}},
+  year        = {2013},
+  month       = dec,
+  institution = {Object Management Group (OMG)},
+  type        = {Specification},
+  number      = {formal/2013-12-09},
+  url         = {https://www.omg.org/spec/BPMN/2.0.2}
+}
+
+@book{freund2012reallifebpmn,
+  title     = {Real-Life BPMN: Using BPMN 2.0 to Analyze, Improve, and Automate Processes in Your Company},
+  author    = {Freund, Jakob and Rücker, Bernd},
+  year      = {2012},
+  publisher = {CreateSpace Independent Publishing Platform},
+  isbn      = {9781480034983}
+}
+
+@book{weske2024bpm,
+  title     = {Business Process Management: Concepts, Languages, Architectures},
+  author    = {Weske, Mathias},
+  year      = {2024},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  edition   = {4},
+  isbn      = {9783662695173},
+  doi       = {10.1007/978-3-662-69518-0}
 }
