--- a/src/sources.bib
+++ b/src/sources.bib
@@ -94,6 +94,14 @@
   language    = {czech}
 }
 
+@misc{cisjr,
+  author  = {CHAPS spol. s r.o.},
+  title   = {CIS JŘ - Zpracování jízdních řádů},
+  url     = {https://www.cisjr.cz},
+  urldate = {2025-12-27},
+  year    = {2025}
+}
+
 @misc{MhdOnlineAdmin,
   title       = {MHD online administrace},
   year        = {2025},
