--- a/src/sources.bib
+++ b/src/sources.bib
@@ -149,7 +149,6 @@
   isbn      = {978-3-662-56509-4}
 }
 
-
 @book{Blanchard2010,
   author    = {Blanchard, Benjamin S. and Fabrycky, Wolter J.},
   title     = {Systems Engineering and Analysis},
@@ -168,17 +167,6 @@
   publisher = {Pearson},
   address   = {Harlow, England},
   isbn      = {978-0133943030}
-}
-
-
-@book{SommervilleSawyer1997,
-  author    = {Sommerville, Ian and Sawyer, Pete},
-  title     = {Requirements Engineering: A Good Practice Guide},
-  edition   = {1st},
-  year      = {1997},
-  publisher = {John Wiley \& Sons},
-  address   = {Hoboken, NJ},
-  isbn      = {978-0471974444}
 }
 
 @book{WardPeppard2002,
@@ -219,4 +207,63 @@
   edition   = {4},
   isbn      = {9783662695173},
   doi       = {10.1007/978-3-662-69518-0}
+}
+
+@book{WiegersBeatty2013,
+  author    = {Wiegers, Karl E. and Beatty, Joy},
+  title     = {Software Requirements},
+  edition   = {3},
+  year      = {2013},
+  publisher = {Microsoft Press},
+  isbn      = {978-0-7356-7966-5}
+}
+
+@book{SommervilleSawyer1997,
+  author    = {Sommerville, Ian and Sawyer, Pete},
+  title     = {Requirements Engineering: A Good Practice Guide},
+  year      = {1997},
+  publisher = {John Wiley \& Sons},
+  isbn      = {978-0-471-97444-4}
+}
+
+@book{StairReynolds2018,
+  author    = {Stair, Ralph M. and Reynolds, George W.},
+  title     = {Principles of Information Systems},
+  edition   = {13},
+  year      = {2018},
+  publisher = {Cengage Learning},
+  isbn      = {978-1305971776}
+}
+
+@book{Weske2012,
+  author    = {Weske, Mathias},
+  title     = {Business Process Management: Concepts, Languages, Architectures},
+  edition   = {2},
+  year      = {2012},
+  publisher = {Springer Berlin Heidelberg},
+  isbn      = {978-3-642-28616-2}
+}
+
+@book{HammerChampy2006,
+  author    = {Hammer, Michael and Champy, James},
+  title     = {Reengineering the Corporation: A Manifesto for Business Revolution},
+  year      = {2006},
+  publisher = {HarperBusiness (HarperCollins)},
+  isbn      = {978-0060559533}
+}
+
+@book{FreundRucker2014,
+  author    = {Freund, Jakob and Rücker, Bernd},
+  title     = {Real-Life BPMN: Using BPMN 2.0 to Analyze, Improve, and Automate Processes in Your Company},
+  year      = {2014},
+  publisher = {CreateSpace Independent Publishing Platform},
+  isbn      = {978-1502972323}
+}
+
+@book{Davenport1993,
+  author    = {Davenport, Thomas H.},
+  title     = {Process Innovation: Reengineering Work Through Information Technology},
+  year      = {1993},
+  publisher = {Harvard Business School Press},
+  isbn      = {978-0875843667}
 }
