--- a/src/sources.bib
+++ b/src/sources.bib
@@ -267,3 +267,20 @@
   publisher = {Harvard Business School Press},
   isbn      = {978-0875843667}
 }
+
+@book{DennisWixomTegarden2015,
+  author    = {Dennis, Alan and Wixom, Barbara Haley and Tegarden, David},
+  title     = {Systems Analysis and Design: An Object-Oriented Approach with UML},
+  edition   = {5},
+  year      = {2015},
+  publisher = {Wiley},
+  isbn      = {978-1118804674}
+}
+
+@misc{OWASPTop10,
+  author       = {OWASP Foundation},
+  title        = {OWASP Top 10 -- The Ten Most Critical Web Application Security Risks},
+  year         = {2021},
+  url          = {https://owasp.org/www-project-top-ten/},
+  urldate      = {2026-01-25}
+}
