--- a/src/sources.bib
+++ b/src/sources.bib
@@ -284,3 +284,12 @@
   url          = {https://owasp.org/www-project-top-ten/},
   urldate      = {2026-01-25}
 }
+
+@book{BassClementsKazman2021,
+  author    = {Bass, Len and Clements, Paul and Kazman, Rick},
+  title     = {Software Architecture in Practice},
+  edition   = {4},
+  year      = {2021},
+  publisher = {Pearson / Addison-Wesley Professional},
+  isbn      = {978-0136886099}
+}
